# cs249r_book

./:  embedded_ml_exercise.qmd  .Makefile.swp  ._quarto.yml.swp  .all-contributorsrc  .claude  .codespell-ignore  .codespell-ignore-words.txt  .codespellrc  .cursorrules  .envrc  .files_to_audit.txt  .gitattributes  .gitignore  .gitignore.swp  .gitmodules  .markdownlint.json  .nojekyll  .pre-commit-config.yaml  .pre-commit-history.md  .prettierrc.json  .references.bib.swp  .references_verified.json  .review-scorecard-introduction.md  .vale.ini  .yamllint  404.html  BUILD.md  BUILD_QA_NOTES.md  CALLOUT_STYLING_ANALYSIS.md  CHANGELOG.MD  CHANGELOG.md  CHANGELOG.md_ORG  CITATION.bib  CITATION.cff  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  (+384 more)
interviews/vault-cli/: .gitignore  LICENSE  Makefile  README.md  check_results.json  check_results_absolute_final.json  check_results_after_repair.json  check_results_final.json  check_results_total_final.json  codegen-hashes.txt  pyproject.toml
mlperf-edu/: .gitignore  DESIGN_PHILOSOPHY.md  README.md  datasets.yaml  pyproject.toml  workloads.yaml
mlperf-edu/bench/: measure_peaks.py
mlperf-edu/examples/: GETTING_STARTED.md  closed_resnet_optimized.py  lab1_optimization.py  lab2_inference_sut.py  lab3_arch_comparison.py  open_resnet_quantized.py  practitioner_workflows.py
mlperf-edu/paper/: Makefile  generate_figure3.py  generate_figures.py  inference_results.json  paper.tex  references.bib  refs.bib  training_data.json
mlperf-edu/reference/: agent_datasets.py  dataset_factory.py  vision_data.py
mlperf-edu/scripts/: compliance_checker.py  generate_all_curves.py  generate_all_curves_v2.py  generate_shards.py  setup_micro_datasets.sh  smoke_data_quality.py  smoke_distributed.py  smoke_dlrm_dram.py  smoke_iter6_serving.py  smoke_iter8_compression.py  smoke_lora.py  smoke_nanogpt_phases.py  smoke_roofline_provenance.py  verify_training.py
mlperf-edu/tests/: test_cli.py  test_loadgen.py  test_nanogpt.py  test_power.py  test_provenance.py  test_referee.py
mlperf-edu/tools/: check_taxonomy.py  cost_model.py  cost_skus.yaml  measure_all_workloads.py  migrate_taxonomy_iter4.py  sync_yaml_from_sidecars.py
mlsysim/: .all-contributorsrc  404.html  ARCHITECTURE_PLAN.md  BEST_PRACTICES.md  CHANGELOG.md  CITATION.cff  LICENSE.md  Makefile  README.md  RELEASE.md  RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.1.2.md  V2_PLAN.md  __init__.py  __main__.py  accuracy.html  agentic-mcp.html  api-stability.html  architecture.html  cli-reference.html  cli.py  contributing.html  empirical-calibration.html  extending-the-engine.html  fmt.py  for-engineers.html  for-instructors.html  for-students.html  generate_appendix.py  getting-started.html  glossary.html  index.html  laws-explained.html  math.html  models-and-solvers.html  pyproject.toml  pytest.ini  release-manifest.json  robots.txt  search.json  (+8 more)
mlsysim/api/: core.config.SimulationConfig.html  core.config.html  core.engine.Engine.html  core.engine.html  core.evaluation.EvaluationLevel.html  core.evaluation.SystemEvaluation.html  core.evaluation.html  core.html  core.scenarios.Applications.html  core.scenarios.Scenario.html  core.scenarios.Scenarios.html  core.scenarios.html  core.solver.CheckpointModel.html  core.solver.CompressionModel.html  core.solver.ContinuousBatchingModel.html  core.solver.DataModel.html  core.solver.DistributedModel.html  core.solver.EconomicsModel.html  core.solver.EfficiencyModel.html  core.solver.InferenceScalingModel.html  core.solver.OrchestrationModel.html  core.solver.ReliabilityModel.html  core.solver.ResponsibleEngineeringModel.html  core.solver.ScalingModel.html  core.solver.SensitivitySolver.html  core.solver.ServingModel.html  core.solver.SingleNodeModel.html  core.solver.SustainabilityModel.html  core.solver.SynthesisSolver.html  core.solver.TailLatencyModel.html  core.solver.TopologyModel.html  core.solver.TransformationModel.html  core.solver.WeightStreamingModel.html  core.solver.html  hardware.Hardware.html  hardware.HardwareNode.html  hardware.html  hardware.registry.Hardware.html  hardware.registry.html  hardware.types.HardwareNode.html  (+27 more)
mlsysim/blog/: how-much-memory-llama3.html
mlsysim/cli/: OUTPUT_PRACTICES.md  exceptions.py  interviewer.py  main.py  renderers.py  schemas.py
mlsysim/core/: __init__.py  _validation.py  clusters.py  config.py  constants.py  datacenters.py  defaults.py  deployment.py  dse.py  engine.py  evaluation.py  explainers.py  formulas.py  hardware.py  models.py  pedagogy.py  pipeline.py  registry.py  resolver_factory.py  results.py  scenarios.py  solver.py  systems.py  types.py  units.py  walls.py
mlsysim/docs/: .gitignore  404.qmd  WEBSITE_AUDIT.md  _navbar-generated.yml  _navbar-local.yml  _quarto.yml  accuracy.qmd  agentic-mcp.qmd  api-stability.md  architecture.qmd  cli-reference.qmd  contributing.qmd  empirical-calibration.md  extending-the-engine.qmd  for-engineers.qmd  for-instructors.qmd  for-students.qmd  getting-started.qmd  glossary.qmd  index.qmd  laws-explained.qmd  llms.txt  manifest.json  math.qmd  models-and-solvers.qmd  references.bib  site.webmanifest  slides.qmd  solver-guide.qmd  understanding-efficiency.md  vision-0.1.0.qmd  whitepaper.qmd
mlsysim/examples/: 01_basic_roofline.py  02_carbon_geography.py  03_heterogeneous_cluster.py  04_data_wall.py  05_huggingface_import.py  06_multi_objective_pareto.py  custom_design.py  gemini_design_loop.py  hardware_comparison.py  (+5 more)
tinytorch/: .all-contributorsrc  .buildinfo  .claude  .coverage  .cursor~HEAD  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .shared-ai-rules.md  .tinyrc  404.html  CHANGELOG.md  CONTRIBUTING.md  INSTRUCTOR.md  LICENSE  MANIFEST.in  Makefile  README.md  activate.sh  big-picture.html  community.html  conclusion.html  credits.html  datasets.html  faq.html  fix-venv-architecture.sh  genindex.html  getting-started.html  glossary.html  index.html  install.sh  intro.html  objects.inv  preface.html  prerequisites.html  progress.json  pyproject.toml  rebuild-site.sh  release-manifest.json  (+11 more)
(+44429 files in other folders)
