[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlsys"
version = "0.1.0"
description = "The Core Physics and Simulation Engine for the Machine Learning Systems Textbook."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "MLSys Authors" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pint>=0.23",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "plotly>=5.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[project.scripts]
mlsysim = "mlsysim.cli.main:app"

[project.optional-dependencies]
docs = [
    "quartodoc",
    "jupyter",
]
dev = [
    "pytest",
    "scipy>=1.10.0",
    "ortools>=9.6",
]

[project.urls]
"Homepage" = "https://github.com/mlsysbook/vols"
"Bug Tracker" = "https://github.com/mlsysbook/vols/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlsys*"]
