[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlperf_edu"
version = "0.1.0"
description = "A scaled-down, educational implementation of MLPerf for teaching ML Systems."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
    "transformers>=4.0.0"
]

[project.scripts]
mlperf = "mlperf.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=6.0.0",
]
