[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlsysim"
version = "0.1.0"
description = "ML Systems Infrastructure Modeling Engine — first-principles analytical framework for ML workloads."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Vijay Janapa Reddi", email = "vj@eecs.harvard.edu"}
]
license = {text = "CC-BY-NC-SA-4.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
dependencies = [
    "pint>=0.23",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]
viz = [
    "plotly>=5.0.0",
    "matplotlib>=3.5.0",
]
labs = [
    "marimo>=0.19.0",
    "plotly>=5.0.0",
]
opt = [
    "scipy>=1.10.0",
    "ortools>=9.6",
]
full = [
    "mlsysim[cli,viz,labs,opt]",
    "pandas>=2.0.0",
]
docs = [
    "nbformat>=5.7",
    "jupyter>=1.0",
    "nbclient>=0.7",
    "matplotlib>=3.5.0",
    "numpy>=1.24.0",
    "plotly>=5.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
mlsysim = "mlsysim.cli.main:app"

[project.urls]
Homepage = "https://mlsysbook.ai/mlsysim"
Repository = "https://github.com/harvard-edge/cs249r_book"
Documentation = "https://mlsysbook.ai/mlsysim"
Issues = "https://github.com/harvard-edge/cs249r_book/issues"

[tool.hatch.build.targets.wheel]
# The pyproject.toml lives inside mlsysim/, so "." IS the mlsysim package.
# Hatch's "sources" remaps the current dir to the "mlsysim" package name in the wheel.
packages = ["."]
sources = {"." = "mlsysim"}
exclude = ["tests", "docs", "examples", "notebooks", "paper", "vscode-ext", "dist", "build", "*.egg-info"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["--strict-markers"]
