[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "staffml-vault"
version = "0.1.0"
description = "CLI for the StaffML question vault — authoring, building, and releasing the corpus."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Vijay Janapa Reddi" }]
license = { text = "MIT" }
keywords = ["staffml", "vault", "ml-systems", "interviews"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.7",
    "pyyaml>=6",
    "click>=8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-timeout>=2",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
vault = "vault_cli.main:app"

[project.urls]
Homepage = "https://staffml.mlsysbook.ai"
Architecture = "https://github.com/harvard-edge/cs249r_book/blob/dev/interviews/vault/ARCHITECTURE.md"
Review-Ledger = "https://github.com/harvard-edge/cs249r_book/blob/dev/interviews/vault/REVIEWS.md"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --strict-markers --timeout=60"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # line-length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
